# NicTasks

./: .gitignore  CHANGELOG.md  LaunchApp.ps1  README.md  generate-icons.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.copilot/skills/launch-app/: SKILL.md
.copilot/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddTask.tsx  ConflictBanner.tsx  LogPanel.tsx  NewTaskModal.tsx  Section.tsx  SectionManager.tsx  TaskItem.tsx  TaskList.tsx  UpdateNotifier.tsx
src/storage/: persistence.ts
src/store/: taskStore.ts
